# mpi

./: CMakeLists.txt  main.cpp  mpi.pro  mpi.pro.user.a6bba16  nums.txt  report.docx  report_dop.docx
headers/: mpi.h
